deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil-pg
  template:
    metadata:
      labels:
        app: wil-pg
    spec:
      containers:
        - name: wil-pg
          image: wil42/playground:v1
          ports:
            - containerPort: 8888
