service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-pg
spec:
  selector:
    app: wil-pg
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
